--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,7 +17,7 @@ jobs:
           go-version: 1.18
 
       - name: Get dependencies
-        run: go get -v -t -d ./...
+        run: make deps
 
       - name: Build for Linux amd64
         run: GOOS=linux GOARCH=amd64 go build -o bin/linux/amd64/tc-redirect-tap-linux-amd64
