--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,6 +26,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            cmd/tc-redirect-tap
+            tc-redirect-tap/cmd/tc-redirect-tap
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
